--- a/Kata-API-Cervezas/src/main/resources/application.properties
+++ b/Kata-API-Cervezas/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Kata-API-Cervezas
+spring.datasource.url=jdbc:mariadb://localhost:3307/kata-api
+spring.datasource.username=root
+spring.datasource.password=Super
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
